# pygeohydro

./: .codecov.yml  .coveragerc  .deepsource.toml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  Untitled.ipynb  conftest.py  create_env.sh  environment.yml  environment_ci.yml  environment_dev.yml  noxfile.py  pyproject.toml  readme_pic.xcf  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_pip.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bugreport.yml  config.yml  newfeature.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  draft-pdf.yml  lint.yml  pre-commit.yml  python-publish.yml  release.yml  test.yml
ci/: code_checks.sh
ci/requirements/: doc.yml  environment-dev.yml  environment.yml  py3.6.yml  py3.7.yml  py3.8.yml  py3.9.yml  requirements_doc.txt  requirements_lint.txt
data/01031500/geometry.gpkg/: geometry.dbf  geometry.shp
data/2603023/: 20000101_20151231.h5
data/4489096/: 20000101_20151231.h5
docs/: Makefile  conf.py  environment.yml  examples.rst  hydrodata.hydrodata.rst  hydrodata.nlcd_helper.rst  hydrodata.plotter.rst  hydrodata.rst  index.rst  installation.rst  make.bat  modules.rst  paper.md  pygeohydro.rst  pynhd.rst  quickguide.ipynb  requirements.txt  usage.ipynb  usage.rst
docs/_static/: style.css  versions.json
docs/examples/: 3dep.ipynb  daymet.ipynb  nhdplus.ipynb  nid.ipynb  nlcd.ipynb  nwis.ipynb  ssebop.ipynb  webservices.ipynb
docs/examples/data/01031500/: canopy_2016.geotiff  cover_2016.geotiff  impervious_2016.geotiff
docs/examples/data/01031500/geometry.gpkg/: geometry.shx
docs/examples/data/01467087/geometry.gpkg/: geometry.shp  geometry.shx
examples/data/01467087/: 20000101_20151231.nc  cover_2011.geotiff  watershed.json
examples/data/01539000/: 20000101_20151231.nc  watershed.json
examples/data/02040202/: 20000101_20151231.h5  impervious_2011.geotiff  parameters.json
examples/data/02050107/: 20000101_20151231.h5  parameters.json
examples/data/2603023/: 20000101_20151231.h5
examples/data/4489096/: 20000101_20151231.h5
examples/gis_data/: NHDPlusV21_NationalData_GageInfo_05.7z
examples/gis_data/02040202/: geometry.dbf  geometry.shx
examples/gis_data/02050107/: geometry.shp  geometry.shx
examples/gis_data/4489096/: geometry.dbf  geometry.shp  geometry.shx  inlets.cpg  inlets.prj  inlets.sbn  inlets.sbx  inlets.shp  inlets.shx  inlets.xml  params.txt
gis_data/: NHDPlusV21_NationalData_GageLoc_05.7z
gis_data/NHDPlusNationalData/: GageLoc.shp  GageLoc.shx
hydrodata/: __init__.py  connection.py  datasets.py  exceptions.py  helpers.py  hydrodata.py  nhdplus.R  nlcd_helper.py  plot.py  plotter.py  print_versions.py  services.py  streamstats.py  utils.py
hydrodata/data/2603023/: params.txt
hydrodata/gis_data/2603023/: geometry.dbf  geometry.shp  geometry.shx
hydrodata/sources/: __init__.py  meta_source.py  ssebopeta.py
pygeohydro/: __init__.py  exceptions.py  helpers.py  levee.py  nfhl.py  nlcd.py  nwis.py  plot.py  print_versions.py  pygeohydro.py  stnfloodevents.py  us_abbrs.py  waterdata.py  watershed.py
scripts/: generate_pip_deps_from_conda.py
src/pygeohydro/: __init__.py  exceptions.py  helpers.py  levee.py  nfhl.py  nid.py  nlcd.py  nwis.py  plot.py  print_versions.py  pygeohydro.py  stnfloodevents.py  us_abbrs.py  waterdata.py  watershed.py
tests/: __init__.py  test_exceptions.py  test_hydrodata.py  test_pygeohydro.py  test_stn.py
tests/data/01031500/geometry.gpkg/: geometry.dbf
