[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
  "setuptools-scm>=8",
]

[project]
name = "pygeohydro"
description = "Access geospatial web services that offer hydrological data"
readme = "README.rst"
license = { text = "MIT" }
authors = [
  { name = "Taher Chegini", email = "cheginit@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "async-retriever<0.17,>=0.16",
  "cytoolz",
  "defusedxml",
  "folium",
  "geopandas>=0.10",
  "h5netcdf",
  "hydrosignatures<0.17,>=0.16",
  "matplotlib>=3.5",
  "numpy>=1.21",
  "pandas>=1",
  "pygeoogc<0.17,>=0.16.3",
  "pygeoutils<0.17,>=0.16.3",
  "pynhd<0.17,>=0.16",
  "pyproj>=3.0.1",
  "rioxarray>=0.11",
  "scipy",
  "shapely>=2",
  "ujson",
  "xarray>=2023.1",
]
optional-dependencies.io = [
  "pyogrio",
]
optional-dependencies.stac = [
  "planetary-computer",
  "pystac-client",
]
optional-dependencies.test = [
  "pytest-cov",
  "pytest-sugar",
  "pytest-xdist[psutil]",
]
urls.Changelog = "https://docs.hyriver.io/changelogs/pygeohydro.html"
urls.CI = "https://github.com/hyriver/pygeohydro/actions"
urls.Homepage = "https://docs.hyriver.io/readme/pygeohydro.html"
urls.Issues = "https://github.com/hyriver/pygeohydro/issues"

[tool.setuptools]
include-package-data = true
license-files = [
  "LICENSE",
]
platforms = [
  "any",
]
zip-safe = false

[tool.setuptools.package-data]
pygeohydro = [
  "py.typed",
]

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools_scm]
fallback_version = "999"

[tool.ruff]
target-version = "py38"
line-length = 100

exclude = [
  ".nox",
  "__pycache__",
]

lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # compatibility with numpy 2.0
  "NPY201",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TCH",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]

lint.per-file-ignores."tests/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # use of "eval"
  "PGH001",
  # Mutable class attributes
  "RUF012",
  # use of "assert"
  "S101",
  # use of "exec"
  "S102",
  # possible hardcoded password
  "S106",
]
lint.extend-safe-fixes = [
  # absolute imports
  "TID252",
]
lint.flake8-bugbear.extend-immutable-calls = [
  "chr",
  "typer.Argument",
  "typer.Option",
]
lint.isort.known-first-party = [
  "async_retriever",
  "pygeoogc",
  "pygeoutils",
  "pynhd",
  "py3dep",
  "hydrosignatures",
  "pygeohydro",
  "pydaymet",
  "pygridmet",
  "pynldas2",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "numpy"
lint.ignore = [
  "D103",
  "D105",
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  "PGH003",
  "PLR0913",
  "PLR2004",
]

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.nox,**/us_abbrs.py,cache"
ignore-words-list = "gage,gages,paramss,trough"

[tool.pytest.ini_options]
addopts = "--ignore=noxfile.py -n=auto -v --cov=pygeohydro --cov-report xml --durations=5"
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
filterwarnings = [
  "ignore:.*distutils.*",
  "ignore:.*--rsyncdir command line argument.*",
  "ignore:.*numpy.ndarray size changed.*",
  "ignore:.*'cgi' is deprecated.*",
  "ignore:.*Calling float on a single element.*",
  "ignore:.*Shapely GEOS version.*",
]
testpaths = [
  "tests",
  "pygeohydro",
]

[tool.coverage.report]
exclude_lines = [
  'raise ServiceUnavailableError',
  "if TYPE_CHECKING:",
]
ignore_errors = true

[tool.coverage.run]
branch = true
omit = [
  "**/__init__.py",
  "**/print_versions.py",
]
parallel = true
source = [
  'pygeohydro',
]

[tool.pyright]
exclude = [
  ".nox/",
  "**/__pycache__",
  "**/__init__.py",
  "tests/",
]
include = [
  "pygeohydro",
]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportAttributeAccessIssue = false
typeCheckingMode = "strict"

[tool.fixit]
formatter = "ufmt"

[tool.refurb]
python_version = "3.8"
quiet = true

[[tool.refurb.amend]]
path = "tests"
ignore = [
  "FURB184",
]
