[metadata]
name = pygeohydro
description = Access geospatial hydrology web services through Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cheginit/pygeohydro
author = Taher Chegini
author_email = cheginit@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Typing :: Typed
project_urls =
    Homepage = https://github.com/cheginit/pygeohydro
    Issues = https://github.com/cheginit/pygeohydro/issues
    CI = https://github.com/cheginit/pygeohydro/actions
    Changelog = https://github.com/cheginit/pygeohydro/blob/main/HISTORY.rst

[options]
packages = find:
install_requires =
    async-retriever>=0.2
    cytoolz
    defusedxml
    folium
    geopandas>=0.7
    lxml
    matplotlib
    numpy>=1.17
    pandas>=1.0
    pygeoogc>=0.11
    pygeoutils>=0.11
    pynhd>=0.11
    rasterio>=1.2
    shapely>=1.6
    xarray>=0.18
    importlib-metadata;python_version < '3.8'
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest-cov
    pytest-xdist[psutil]

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    D107 # no need to add docstring for __init__
    D105 # no need to add docstring to magic methods
exclude =
    .eggs
    __init__.py
    .ipynb_checkpoints
    .nox
    tests/*.py
    noxfile.py

[darglint]
strictness = short
docstring_style = numpy
ignore = DAR401,DAR103
ignore_regex = ^_(.*)

[codespell]
skip = __pycache__,_build,.mypy_cache,.git,./htmlcov,.nox
